# vm-onoff

./: .dockerignore  .graphqlrc.yml  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
src/api/http/: mod.rs
src/api/http/axum/: mod.rs
src/api/http/graphql/: error.rs  loader.rs  mod.rs  model.rs  util.rs
src/azure/: mod.rs  utils.rs
src/azure/auth/: client_credentials.rs  mod.rs  token_manager.rs
src/core/: mod.rs
