[package]
name = "vm-onoff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = { version = "3", features = ["dataloader"] }
async-graphql-axum = "3"
async-trait = "0.1"
axum = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
